@@ -23,6 +23,8 @@ git-annex (6.20160420) UNRELEASED; urgency=medium
   * Added annex.gnupg-decrypt-options and
     remote.<name>.annex-gnupg-decrypt-options, which are passed to gpg
     when it's decrypting data.
+  * fsck: When a key is not previously known in the location log,
+    record something so that reinject --known will work.
 
  -- Joey Hess <id@joeyh.name>  Thu, 28 Apr 2016 13:17:04 -0400
 
